--- a/style.css
+++ b/style.css
@@ -113,6 +113,31 @@ a:visited {
   font-weight: 800;
 }
 
+.sort {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1.75rem;
+}
+.sort__label {
+  flex: 0 0 50%;
+  text-align: end;
+  font-family: inherit;
+  font-size: 1.4rem;
+}
+.sort__input {
+  width: 100%;
+  padding: 0.3rem 1.1rem;
+  font-family: inherit;
+  font-size: 1.4rem;
+  border: none;
+  border-radius: 3px;
+  background-color: var(--color-light--3);
+  transition: all 0.2s;
+}
+
 .form {
   background-color: var(--color-dark--2);
   border-radius: 5px;
